@@ -21,7 +21,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.eclipse.equinox.p2.metadata.IInstallableUnit;
@@ -157,7 +156,7 @@ public final class StandardEEResolutionHints implements ExecutionEnvironmentReso
                         }
                         return parseEECapabilityVersion(eeCapability) //
                                 .map(version -> MetadataFactory.createProvidedCapability("osgi.ee", eeName, version)); //$NON-NLS-1$
-                    }).collect(Collectors.toList());
+                    }).toList();
         } catch (BundleException e) {
             return Collections.emptyList();
         }
